# FAIL-Detect

./: .gitignore  NEW_README.md  check_hdf5_data.py  conda_environment.yaml  pyproject.toml
UQ_baselines/CFM/: train.py
UQ_baselines/DER/: train.py
UQ_baselines/NatPN/: net_natpn.py
UQ_baselines/PCA_kmeans/: train.py
UQ_baselines/RND/: train.py
UQ_baselines/logpZO/: train.py
UQ_test/: eval_load_baseline.py  eval_together.py  plot_with_CP_band.py
diffusion_policy/common/: sampler.py
diffusion_policy/configs_robomimic/: image_square_ph_visual_diffusion_policy_cnn.yaml  image_square_ph_visual_flow_policy_cnn.yaml
diffusion_policy/env/robomimic/: robomimic_image_wrapper.py
diffusion_policy/env_runner/: blockpush_lowdim_runner.py  kitchen_lowdim_runner.py  pusht_image_runner.py  pusht_keypoints_runner.py  robomimic_image_runner.py  robomimic_image_runner_FAIL-Detect.py  robomimic_lowdim_runner.py
diffusion_policy/gym_util/: async_vector_env.py
diffusion_policy/model/common/: rotation_transformer.py
diffusion_policy/policy/: diffusion_transformer_hybrid_image_policy.py  diffusion_unet_hybrid_image_policy.py  flow_unet_hybrid_image_policy.py  ibc_dfo_hybrid_image_policy.py
diffusion_policy/scripts/: visualize_robomimic_image_format.py
diffusion_policy/workspace/: train_diffusion_unet_hybrid_workspace.py
